app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idurar-idurar-erp-crm-svc
spec:
  selector:
    app: idurar-idurar-erp-crm
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
